@@ -1798,7 +1798,7 @@ output_standard_includes (struct cb_program *prog)
 /* GnuCOBOL defines */
 
 static void
-output_gnucobol_defines (const char *formatted_date, struct tm *local_time)
+output_gnucobol_defines (const char *formatted_date)
 {
 	int	i;
 
@@ -1823,19 +1823,14 @@ output_gnucobol_defines (const char *formatted_date, struct tm *local_time)
 	output_line ("#define  COB_PATCH_LEVEL\t\t%d", PATCH_LEVEL);
 	output_line ("#define  COB_MODULE_FORMATTED_DATE\t\"%s\"", formatted_date);
 
-	if (local_time) {
-		i = ((local_time->tm_year + 1900) * 10000) +
-			((local_time->tm_mon + 1) * 100) +
-			local_time->tm_mday;
-		output_line ("#define  COB_MODULE_DATE\t\t%d", i);
-		i = (local_time->tm_hour * 10000) +
-			(local_time->tm_min * 100) +
-			local_time->tm_sec;
-		output_line ("#define  COB_MODULE_TIME\t\t%d", i);
-	} else {
-		output_line ("#define  COB_MODULE_DATE\t\t0");
-		output_line ("#define  COB_MODULE_TIME\t\t0");
-	}
+	i = ((current_compile_tm.tm_year + 1900) * 10000) +
+		((current_compile_tm.tm_mon + 1) * 100) +
+		current_compile_tm.tm_mday;
+	output_line ("#define  COB_MODULE_DATE\t\t%d", i);
+	i = (current_compile_tm.tm_hour * 10000) +
+		(current_compile_tm.tm_min * 100) +
+		current_compile_tm.tm_sec;
+	output_line ("#define  COB_MODULE_TIME\t\t%d", i);
 
 }
 
@@ -13266,12 +13261,6 @@ codegen (struct cb_program *prog, const char *translate_name)
 void
 codegen_init (struct cb_program *prog, const char *translate_name)
 {
-	struct tm* loctime;
-	time_t			sectime;
-
-	sectime = time (NULL);
-	loctime = localtime (&sectime);
-
 	current_program = prog;
 	current_section = NULL;
 	current_paragraph = NULL;
@@ -13310,16 +13299,9 @@ codegen_init (struct cb_program *prog, const char *translate_name)
 		string_buffer = cobc_main_malloc ((size_t)COB_MINI_BUFF);
 	}
 
-	if (loctime) {
-		/* Leap seconds ? */
-		if (loctime->tm_sec >= 60) {
-			loctime->tm_sec = 59;
-		}
-		strftime (string_buffer, (size_t)COB_MINI_MAX,
-			"%b %d %Y %H:%M:%S", loctime);
-	} else {
-		string_buffer[0] = 0;
-	}
+	strftime (string_buffer, (size_t)COB_MINI_MAX,
+		"%b %d %Y %H:%M:%S", &current_compile_tm);
+
 	output_target = yyout;
 	output_header (string_buffer, NULL);
 	output_target = cb_storage_file;
@@ -13338,7 +13320,7 @@ codegen_init (struct cb_program *prog, const char *translate_name)
 
 	output_standard_includes (prog);
 	/* string_buffer has formatted date from above */
-	output_gnucobol_defines (string_buffer, loctime);
+	output_gnucobol_defines (string_buffer);
 
 	output_newline ();
 	output_line ("/* Global variables */");
