@@ -59,6 +59,10 @@
 
 	* cobc.c: check SOURCE_DATE_EPOCH once, if set parse via libcob
 	  to use as compile timestamp
+	* cobc.c (set_compile_date_tm): extracted from set_listing_date
+	* cobc.c (set_compile_date): execute set_compile_date_tm on each setting
+	* codegen.c (output_gnucobol_defines): use pre-set compile timestamp
+	  instead if re-setting them
 
 2022-12-02  Simon Sobisch <simonsobisch@gnu.org>
 
